Polishing first post.

--- a/_posts/2020-12-10-day-1/day-1.Rmd
+++ b/_posts/2020-12-10-day-1/day-1.Rmd
@@ -10,7 +10,6 @@ output:
     self_contained: false
 ---
 
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
@@ -89,5 +88,7 @@ df <- df %>%
 df
 ```
 
+## Answer
 
+The answer is `r format(pull(df, total), scientifi = FALSE)`.
 
