--- a/index.Rmd
+++ b/index.Rmd
@@ -3,3 +3,7 @@ title: "Advent of Code"
 site: distill::distill_website
 listing: posts
 ---
+
+<br>
+
+Solving the [Advent of Code puzzles](https://adventofcode.com/) one day at a time.
