Add more context to part 1.

--- a/_posts/2020-12-11-day-04/day-04.Rmd
+++ b/_posts/2020-12-11-day-04/day-04.Rmd
@@ -96,6 +96,22 @@ df %>%
 
 # Part 1
 
+<small>
+The automatic passport scanners are slow because they're having trouble detecting which passports have all required fields. The expected fields are as follows:
+
+
+```
+byr (Birth Year)
+iyr (Issue Year)
+eyr (Expiration Year)
+hgt (Height)
+hcl (Hair Color)
+ecl (Eye Color)
+pid (Passport ID)
+cid (Country ID)
+```
+</small>
+
 ```{r}
 expected_fields <- c(
   "byr",
