--- a/_posts/2020-12-12-day-06/day-06.Rmd
+++ b/_posts/2020-12-12-day-06/day-06.Rmd
@@ -92,7 +92,7 @@ df %>%
 
 ## Part 1
 
-Count the number of unique question per group.
+Count the number of unique questions per group.
 
 ```{r}
 n <- df %>% 
