--- a/_posts/2020-12-10-day-02/day-02.Rmd
+++ b/_posts/2020-12-10-day-02/day-02.Rmd
@@ -17,32 +17,9 @@ library(tidyverse)
 library(here)
 ```
 
-## Context
-
 https://adventofcode.com/2020/day/2
 
-<small>
-Your flight departs in a few days from the coastal airport; the easiest way down to the coast from here is via toboggan.
-
-The shopkeeper at the North Pole Toboggan Rental Shop is having a bad day. "Something's wrong with our computers; we can't log in!" You ask if you can take a look.
-
-Their password database seems to be a little corrupted: some of the passwords wouldn't have been allowed by the Official Toboggan Corporate Policy that was in effect when they were chosen.
-
-To try to debug the problem, they have created a list (your puzzle input) of passwords (according to the corrupted database) and the corporate policy when that password was set.
-
-For example, suppose you have the following list:
-
-1-3 a: abcde
-1-3 b: cdefg
-2-9 c: ccccccccc
-Each line gives the password policy and then the password. The password policy indicates the lowest and highest number of times a given letter must appear for the password to be valid. For example, 1-3 a means that the password must contain a at least 1 time and at most 3 times.
-
-In the above example, 2 passwords are valid. The middle password, cdefg, is not; it contains no instances of b, but needs at least 1. The first and third passwords are valid: they contain one a or nine c, both within the limits of their respective policies.
-
-How many passwords are valid according to their policies?
-</small>
-
-## Read the input passwords
+## Read the input data
 
 ```{r read_input}
 file <- here("data", "input", "day2.txt")
@@ -54,8 +31,6 @@ df <- tibble(x)
 df
 ```
 
-## Prepare the data
-
 ```{r}
 df <- df %>% 
   separate(x, into = c("policy", "password"), sep = ":") %>% 
@@ -64,22 +39,29 @@ df <- df %>%
 
 df
 ```
-## Verify passwords (part 1)
+
+## Part 1
+
+How many passwords are valid.
 
 ```{r}
 df %>% 
   mutate(count = str_count(password, letter)) %>% 
   rowwise() %>% 
-  filter(between(count, min, max))
+  filter(between(count, min, max)) %>% 
+  rmarkdown::paged_table()
 ```
 
-## Verify passwords (part 2)
+## Part 2
+
+How many passwords are valid according to the new interpretation of the policies?
 
 ```{r}
 df %>% 
   mutate(location_1 = str_sub(password, min, min)) %>% 
   mutate(location_2 = str_sub(password, max, max)) %>% 
   rowwise() %>% 
-  filter((letter == location_1 | letter == location_2) & (location_1 != location_2))
+  filter((letter == location_1 | letter == location_2) & (location_1 != location_2)) %>% 
+  rmarkdown::paged_table()
 ```
 
