--- a/_posts/2020-12-11-day-03/day-03.Rmd
+++ b/_posts/2020-12-11-day-03/day-03.Rmd
@@ -17,31 +17,9 @@ library(tidyverse)
 library(here)
 ```
 
-## Context
-
 https://adventofcode.com/2020/day/3
 
-<small>
-With the toboggan login problems resolved, you set off toward the airport. While travel by toboggan might be easy, it's certainly not safe: there's very minimal steering and the area is covered in trees. You'll need to see which angles will take you near the fewest trees.
-
-Due to the local geology, trees in this area only grow on exact integer coordinates in a grid. You make a map (your puzzle input) of the open squares (.) and trees (#) you can see. For example:
-
-```
-..##.......
-#...#...#..
-.#....#..#.
-..#.#...#.#
-.#...##..#.
-..#.##.....
-.#.#.#....#
-.#........#
-#.##...#...
-#...##....#
-.#..#...#.#
-```
-</small>
-
-## Read the input map
+## Read the input data
 
 ```{r read_input}
 file <- here("data", "input", "day3.txt")
