--- a/_posts/2020-12-11-day-04/day-04.Rmd
+++ b/_posts/2020-12-11-day-04/day-04.Rmd
@@ -17,52 +17,9 @@ library(tidyverse)
 library(here)
 ```
 
-## Context
-
 https://adventofcode.com/2020/day/4
 
-<small>
-You arrive at the airport only to realize that you grabbed your North Pole Credentials instead of your passport. While these documents are extremely similar, North Pole Credentials aren't issued by a country and therefore aren't actually valid documentation for travel in most of the world.
-
-It seems like you're not the only one having problems, though; a very long line has formed for the automatic passport scanners, and the delay could upset your travel itinerary.
-
-Due to some questionable network security, you realize you might be able to solve both of these problems at the same time.
-
-The automatic passport scanners are slow because they're having trouble detecting which passports have all required fields. The expected fields are as follows:
-
-```
-byr (Birth Year)
-iyr (Issue Year)
-eyr (Expiration Year)
-hgt (Height)
-hcl (Hair Color)
-ecl (Eye Color)
-pid (Passport ID)
-cid (Country ID)
-```
-
-Passport data is validated in batch files (your puzzle input). Each passport is represented as a sequence of key:value pairs separated by spaces or newlines. Passports are separated by blank lines.
-
-Here is an example batch file containing four passports:
-
-```
-ecl:gry pid:860033327 eyr:2020 hcl:#fffffd
-byr:1937 iyr:2017 cid:147 hgt:183cm
-
-iyr:2013 ecl:amb cid:350 eyr:2023 pid:028048884
-hcl:#cfa07d byr:1929
-
-hcl:#ae17e1 iyr:2013
-eyr:2024
-ecl:brn pid:760753108 byr:1931
-hgt:179cm
-
-hcl:#cfa07d eyr:2025 pid:166559648
-iyr:2011 ecl:brn hgt:59in
-```
-</small>
-
-## Read the passport information
+## Read the input data
 
 ```{r read_input}
 file <- here("data", "input", "day4.txt")
@@ -96,22 +53,6 @@ df %>%
 
 # Part 1
 
-<small>
-The automatic passport scanners are slow because they're having trouble detecting which passports have all required fields. The expected fields are as follows:
-
-
-```
-byr (Birth Year)
-iyr (Issue Year)
-eyr (Expiration Year)
-hgt (Height)
-hcl (Hair Color)
-ecl (Eye Color)
-pid (Passport ID)
-cid (Country ID)
-```
-</small>
-
 ```{r}
 expected_fields <- c(
   "byr",
@@ -138,23 +79,6 @@ filtered_passport %>%
 ## Part 2
 
 The second part consists in filtering the remaining passports with stricter rules.
-
-<small>
-You can continue to ignore the cid field, but each other field has strict rules about what values are valid for automatic validation:
-
-```
-byr (Birth Year) - four digits; at least 1920 and at most 2002.
-iyr (Issue Year) - four digits; at least 2010 and at most 2020.
-eyr (Expiration Year) - four digits; at least 2020 and at most 2030.
-hgt (Height) - a number followed by either cm or in:
-If cm, the number must be at least 150 and at most 193.
-If in, the number must be at least 59 and at most 76.
-hcl (Hair Color) - a # followed by exactly six characters 0-9 or a-f.
-ecl (Eye Color) - exactly one of: amb blu brn gry grn hzl oth.
-pid (Passport ID) - a nine-digit number, including leading zeroes.
-cid (Country ID) - ignored, missing or not.
-```
-</small>
 
 ```{r}
 filtered_passport <- filtered_passport %>%
