--- a/_posts/2021-12-02-day-02/day-02.Rmd
+++ b/_posts/2021-12-02-day-02/day-02.Rmd
@@ -6,10 +6,11 @@ author:
   - name: Philippe Massicotte
     url: {}
 date: 2021-12-02
-draft: true
 output:
   distill::distill_article:
     self_contained: false
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -21,8 +22,7 @@ library(here)
 ## Part 1
 
 ```{r}
-df <-
-  read_delim(here::here("data/input/2021/02/01_input"),
+df <- read_delim(here::here("data/input/2021/02/01_input"),
     col_names = c("direction", "amount")
   )
 
@@ -33,7 +33,7 @@ res <- df %>%
   )) %>%
   mutate(amount = ifelse(direction == "up", -amount, amount)) %>%
   group_by(orientation) %>%
-  summarise(total_amout = sum(amount))
+  summarise(total_amout = sum(amount), n = n())
 
 res
 
@@ -45,7 +45,36 @@ res %>%
 ## Part 2
 
 ```{r}
+res <- df %>%
+  mutate(orientation = case_when(
+    direction %in% c("up", "down") ~ "v",
+    direction == "forward" ~ "h"
+  )) %>%
+  mutate(amount = ifelse(direction == "up", -amount, amount)) %>%
+  mutate(aim = case_when(
+    direction == "down" ~ amount,
+    direction == "up" ~ amount,
+    TRUE ~ 0
+  )) %>%
+  rowid_to_column() %>%
+  select(-orientation) %>%
+  pivot_wider(names_from = direction, values_from = amount) %>%
+  mutate(across(everything(), ~ replace_na(., 0))) %>%
+  mutate(depth = 0, h = 0) %>%
+  mutate(aim = cumsum(aim)) %>% 
+  mutate(
+    h = h + forward,
+    depth = depth + (aim * forward)
+  )
 
+res
+
+res %>% 
+  summarise(
+    sum_depth = sum(depth),
+    sum_h = sum(h)
+  ) %>% 
+  prod()
 ```
 
 
