--- a/_posts/2021-12-06-day-06/day-06.Rmd
+++ b/_posts/2021-12-06-day-06/day-06.Rmd
@@ -1,11 +1,29 @@
+---
+title: "Advent of code 2020 day 6"
+description: |
+  --- Day 6: Lanternfish ---
+author:
+  - name: Philippe Massicotte
+    url: {}
+date: 2021-12-06
+output:
+  distill::distill_article:
+    self_contained: false
+---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+
 library(tidyverse)
 library(here)
 
 options(digits = 20)
+```
 
+```{r}
 reproduction <- function(ndays, fishes) {
   for (i in seq_len(ndays)) {
-
     fishes
 
     new_fishes <- fishes[1]
@@ -19,26 +37,29 @@ reproduction <- function(ndays, fishes) {
     fishes_next
 
     fishes <- fishes_next
-
-
   }
 
   return(fishes)
 }
 
-# v <- c(3, 4, 3, 1, 2)
 v <- scan(here("data/input/2021/06"), what = "integer", sep = ",") %>%
   parse_integer()
 
 fishes <- rep(0, 9)
 fc <- rle(sort(v))
 fishes[fc$values + 1] <- fc$lengths
+```
 
 ## Part 1
+
+```{r}
 res <- reproduction(ndays = 80, fishes)
 sum(res)
+```
 
 ## Part 2
+
+```{r}
 res <- reproduction(ndays = 256, fishes)
 sum(res)
-
+```
