--- a/_posts/2021-12-09-day-09/day-09.Rmd
+++ b/_posts/2021-12-09-day-09/day-09.Rmd
@@ -10,18 +10,19 @@ output:
   distill::distill_article:
     self_contained: false
 draft: true
+editor_options: 
+  chunk_output_type: console
 ---
 
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-```
-
-```{r}
 library(tidyverse)
 library(here)
 
-# file <- "~/Desktop/input"
+```
+
+```{r}
 file <- here("data/input/2021/09")
 m <- as.matrix(read_fwf(file, fwf_widths(rep(1, 100))))
 
@@ -37,6 +38,7 @@ low_point <- function(x, y, m) {
   if (x > 1) {
     l <- m[x, y] < m[x - 1, y]
   }
+  
   if (y > 1) {
     u <- m[x, y] < m[x, y - 1]
   }
@@ -44,12 +46,13 @@ low_point <- function(x, y, m) {
   if (x < max_x) {
     r <- m[x, y] < m[x + 1, y]
   }
+  
   if (y < max_y) {
     d <- m[x, y] < m[x, y + 1]
   }
 
   if (all(c(r, l, u, d))) {
-    return(list(x = x, y = y))
+    return(tibble(x = x, y = y))
   } else {
     return(NULL)
   }
@@ -82,12 +85,15 @@ low_point <- function(x, y) {
   if (x < nrow(m)) {
     around <- bind_rows(around, low_point(x + 1, y))
   }
+  
   if (y < ncol(m)) {
     around <- bind_rows(around, low_point(x, y + 1))
   }
+  
   if (x > 1) {
     around <- bind_rows(around, low_point(x - 1, y))
   }
+  
   if (y > 1) {
     around <- bind_rows(around, low_point(x, y - 1))
   }
